Fix portfolio card gaps

--- a/app/components/Work/work.module.scss
+++ b/app/components/Work/work.module.scss
@@ -11,7 +11,7 @@
   &__item {
     display: flex;
     flex-direction: column;
-    gap: $unit * 4;
+    gap: $unit * 2;
     padding: 2rem;
     border-radius: 32px;
     background-color: $dark;
@@ -43,11 +43,16 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    gap: 16px;
+
+    & > * {
+      margin: 0;
+    }
   }
 
   &__title {
     font-size: $unit * 4;
-    margin-top: 0;
+    margin: 0;
   }
 
   &__cta {
